[TS-755] help init daemons like upstart keep track of *all* traffic server's daemons when started via traffic_cop. See also: http://www.mail-archive.com/dev@trafficserver.apache.org/msg02542.html

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1097941 13f79535-47bb-0310-9956-ffa450edef68